# SplitRails

./: .gitignore  README.md
backend/: README.md
contracts/: README.md
contracts/escrow/: .gitignore  Cargo.toml  README.md
contracts/escrow/src/: lib.rs
contracts/smart-wallet/: README.md
docs/: DEMO_GUIDE_NON_TECH.md  DEMO_TRANSACTIONS.md  PITCH_PREP.html  PITCH_PREP.md  PITCH_PREP.txt  PITCH_SCRIPT.html  PITCH_SCRIPT.txt
docs/architecture/: OVERVIEW.md
docs/product/: PITCH.md
scripts/: README.md  setup-toolchain.md
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Avatar.tsx  BottomNav.tsx  Button.tsx  DatePicker.tsx  DonutChart.tsx  ErrorBoundary.tsx  Layout.tsx  Nav.tsx  ParticipantRow.tsx  Select.tsx  SplitCard.tsx
web/src/context/: WalletContext.tsx
web/src/lib/: amounts.test.ts  amounts.ts  anchor.test.ts  anchor.ts  check-contract.ts  config.ts  escrow-bindings.ts  escrow.ts  escrowDraft.ts  glExport.test.ts  glExport.ts  invoiceRegistry.test.ts  invoiceRegistry.ts  passkey.ts  passkeyStore.ts  txLog.test.ts  txLog.ts  wallet.test.ts  wallet.ts
web/src/pages/: Activity.tsx  AuditComplete.tsx  AuditLedger.tsx  Dashboard.tsx  Finance.tsx  History.tsx  Login.tsx  PasskeyDemo.tsx  PaySlice.tsx  Profile.tsx  ReviewSplit.tsx  SentSuccess.tsx  SignUp.tsx  SliceLocked.tsx  SplitCreator.tsx  SplitExpired.tsx  Vault.tsx  ViewAudit.tsx
