[package]
name = "escrow"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
# soroban-env-host 22.1.3 declares `ed25519-dalek = ">=2.0.0"` with no upper
# bound; ed25519-dalek 3.0 broke its rand_core trait bounds. Pin to the last
# compatible 2.x release until soroban-sdk fixes the constraint upstream.
ed25519-dalek = "=2.2.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
